fixing self-play

--- a/01-DOCS/REPORT/INPUT/main.tex
+++ b/01-DOCS/REPORT/INPUT/main.tex
@@ -276,7 +276,7 @@ The ablation we ran to test the effects of our reward shaping strategy (Figure~\
 \carl{
 \textbf{Motivation:} Training against fixed opponents leads to overfitting and limited strategic diversity. Self-play creates a non-stationary environment where the opponent pool evolves over time, enabling discovery of strategies that generalize to diverse opponents \cite{vinyals2019,selfplay2024}.
 
-\textbf{System Components:} We maintain a pool of 12 historical checkpoints (FIFO replacement, saved every 400 episodes) and use dual replay buffers to balance self-play and baseline opponent experiences, preventing catastrophic forgetting. PFSP (Prioritized Fictitious Self-Play) \cite{vinyals2019} selects opponents using variance-mode weighting $w_i = \text{wr}_i(1-\text{wr}_i)$, favoring opponents with ~50\% win rate for optimal challenge. Self-play activation requires win rate >80\% against weak opponent and low variance (<0.3), preventing premature activation. Regression rollback triggers on performance drops >15\%, loading the best checkpoint and resuming with increased anchor-buffer ratio.
+\textbf{System Components:} We maintain a pool of 12 historical checkpoints (FIFO replacement, saved every 400 episodes) and use dual replay buffers to balance self-play and baseline opponent experiences, preventing catastrophic forgetting. PFSP (Prioritized Fictitious Self-Play) \cite{vinyals2019} selects opponents using variance-mode weighting $w_i = \text{wr}_i(1-\text{wr}_i)$, favoring opponents with ~50\% win rate for optimal challenge. Self-play activation requires win rate >80\% against weak opponent, preventing premature activation. Regression rollback triggers on performance drops >15\%, loading the best checkpoint and resuming with increased anchor-buffer ratio.
 % ========================
 
 
